Bug 1501062 - Set the visible region on scrollthumb WebRenderLayerScrollData items. r?botond

This field is used by APZ to implement the feature where the scrollbar snaps
back to the starting position if the mouse gets too far away.